code/dotnet/TimeSeriesAPIforDigitalPortals/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Time Series API for Digital Portals client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.TimeSeriesAPIforDigitalPortals)](https://www.nuget.org/packages/FactSet.SDK.TimeSeriesAPIforDigitalPortals)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Time series data, end-of-day or intraday, tick-by-tick or subsampled.
Additional vendor-specific endpoints provide a modified interface for seamless integration with the ChartIQ chart library.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2
- Package version: 0.10.2
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.TimeSeriesAPIforDigitalPortals
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.TimeSeriesAPIforDigitalPortals
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp

using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.TimeSeriesAPIforDigitalPortals.Api;
using FactSet.SDK.TimeSeriesAPIforDigitalPortals.Client;
using FactSet.SDK.TimeSeriesAPIforDigitalPortals.Model;

namespace Example
{
    public static class PostPricesTimeSeriesEodListExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.TimeSeriesAPIforDigitalPortals.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new PricesApi(config);
            var inlineObject5 = new InlineObject5(); // InlineObject5 | 

            try
            {
                // End-of-day time series data for a notation.
                InlineResponse2005 result = apiInstance.PostPricesTimeSeriesEodList(inlineObject5);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling PricesApi.PostPricesTimeSeriesEodList: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}

```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/wealth/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*PricesApi* | [**PostPricesTimeSeriesEodList**](docs/PricesApi.md#postpricestimeserieseodlist) | **POST** /prices/timeSeries/eod/list | End-of-day time series data for a notation.
*PricesApi* | [**PostPricesTimeSeriesEodSubsampleGet**](docs/PricesApi.md#postpricestimeserieseodsubsampleget) | **POST** /prices/timeSeries/eod/subsample/get | Single subsample end-of-day data for a notation.
*PricesApi* | [**PostPricesTimeSeriesEodSubsampleList**](docs/PricesApi.md#postpricestimeserieseodsubsamplelist) | **POST** /prices/timeSeries/eod/subsample/list | Subsampled end-of-day time series data for a notation.
*PricesApi* | [**PostPricesTimeSeriesIntradayList**](docs/PricesApi.md#postpricestimeseriesintradaylist) | **POST** /prices/timeSeries/intraday/list | Intraday time series data for a notation.
*PricesApi* | [**PostPricesTimeSeriesIntradaySubsampleGet**](docs/PricesApi.md#postpricestimeseriesintradaysubsampleget) | **POST** /prices/timeSeries/intraday/subsample/get | Single subsample intraday data for a notation.
*PricesApi* | [**PostPricesTimeSeriesIntradaySubsampleList**](docs/PricesApi.md#postpricestimeseriesintradaysubsamplelist) | **POST** /prices/timeSeries/intraday/subsample/list | Subsampled intraday time series data for a notation.
*VendorApi* | [**PostVendorChartIQTimeSeriesEodList**](docs/VendorApi.md#postvendorchartiqtimeserieseodlist) | **POST** /vendor/chartIQ/timeSeries/eod/list | End-of-day time series data for a notation.
*VendorApi* | [**PostVendorChartIQTimeSeriesEodSubsampleGet**](docs/VendorApi.md#postvendorchartiqtimeserieseodsubsampleget) | **POST** /vendor/chartIQ/timeSeries/eod/subsample/get | Single subsample end-of-day data for a notation.
*VendorApi* | [**PostVendorChartIQTimeSeriesEodSubsampleList**](docs/VendorApi.md#postvendorchartiqtimeserieseodsubsamplelist) | **POST** /vendor/chartIQ/timeSeries/eod/subsample/list | Subsampled end-of-day time series data for a notation.
*VendorApi* | [**PostVendorChartIQTimeSeriesIntradaySubsampleGet**](docs/VendorApi.md#postvendorchartiqtimeseriesintradaysubsampleget) | **POST** /vendor/chartIQ/timeSeries/intraday/subsample/get | Single subsample intraday data for a notation.
*VendorApi* | [**PostVendorChartIQTimeSeriesIntradaySubsampleList**](docs/VendorApi.md#postvendorchartiqtimeseriesintradaysubsamplelist) | **POST** /vendor/chartIQ/timeSeries/intraday/subsample/list | Subsampled intraday time series data for a notation.


## Documentation for Models

 - [Model.CursorBasedPaginationOutputObject](docs/CursorBasedPaginationOutputObject.md)
 - [Model.CursorBasedPaginationOutputObjectWithoutTotal](docs/CursorBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.ErrorMetaObject](docs/ErrorMetaObject.md)
 - [Model.InlineObject](docs/InlineObject.md)
 - [Model.InlineObject1](docs/InlineObject1.md)
 - [Model.InlineObject10](docs/InlineObject10.md)
 - [Model.InlineObject2](docs/InlineObject2.md)
 - [Model.InlineObject3](docs/InlineObject3.md)
 - [Model.InlineObject4](docs/InlineObject4.md)
 - [Model.InlineObject5](docs/InlineObject5.md)
 - [Model.InlineObject6](docs/InlineObject6.md)
 - [Model.InlineObject7](docs/InlineObject7.md)
 - [Model.InlineObject8](docs/InlineObject8.md)
 - [Model.InlineObject9](docs/InlineObject9.md)
 - [Model.InlineResponse200](docs/InlineResponse200.md)
 - [Model.InlineResponse2001](docs/InlineResponse2001.md)
 - [Model.InlineResponse20010](docs/InlineResponse20010.md)
 - [Model.InlineResponse20010Data](docs/InlineResponse20010Data.md)
 - [Model.InlineResponse20010DataSubsamples](docs/InlineResponse20010DataSubsamples.md)
 - [Model.InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [Model.InlineResponse2001Meta](docs/InlineResponse2001Meta.md)
 - [Model.InlineResponse2002](docs/InlineResponse2002.md)
 - [Model.InlineResponse2002Data](docs/InlineResponse2002Data.md)
 - [Model.InlineResponse2003](docs/InlineResponse2003.md)
 - [Model.InlineResponse2003Data](docs/InlineResponse2003Data.md)
 - [Model.InlineResponse2004](docs/InlineResponse2004.md)
 - [Model.InlineResponse2004Data](docs/InlineResponse2004Data.md)
 - [Model.InlineResponse2004DataRange](docs/InlineResponse2004DataRange.md)
 - [Model.InlineResponse2005](docs/InlineResponse2005.md)
 - [Model.InlineResponse2005Data](docs/InlineResponse2005Data.md)
 - [Model.InlineResponse2005DataPrices](docs/InlineResponse2005DataPrices.md)
 - [Model.InlineResponse2006](docs/InlineResponse2006.md)
 - [Model.InlineResponse2006Data](docs/InlineResponse2006Data.md)
 - [Model.InlineResponse2006DataSubsample](docs/InlineResponse2006DataSubsample.md)
 - [Model.InlineResponse2007](docs/InlineResponse2007.md)
 - [Model.InlineResponse2007Data](docs/InlineResponse2007Data.md)
 - [Model.InlineResponse2007DataSubsamples](docs/InlineResponse2007DataSubsamples.md)
 - [Model.InlineResponse2008](docs/InlineResponse2008.md)
 - [Model.InlineResponse2008Data](docs/InlineResponse2008Data.md)
 - [Model.InlineResponse2008DataPrices](docs/InlineResponse2008DataPrices.md)
 - [Model.InlineResponse2009](docs/InlineResponse2009.md)
 - [Model.InlineResponse2009Data](docs/InlineResponse2009Data.md)
 - [Model.InlineResponse2009DataSubsample](docs/InlineResponse2009DataSubsample.md)
 - [Model.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [Model.InlineResponse200DataRange](docs/InlineResponse200DataRange.md)
 - [Model.InlineResponse200Meta](docs/InlineResponse200Meta.md)
 - [Model.OffsetBasedPaginationOutputObject](docs/OffsetBasedPaginationOutputObject.md)
 - [Model.OffsetBasedPaginationOutputObjectWithoutTotal](docs/OffsetBasedPaginationOutputObjectWithoutTotal.md)
 - [Model.PartialOutputObject](docs/PartialOutputObject.md)
 - [Model.PricesTimeSeriesEodSubsampleGetData](docs/PricesTimeSeriesEodSubsampleGetData.md)
 - [Model.PricesTimeSeriesEodSubsampleGetDataInterval](docs/PricesTimeSeriesEodSubsampleGetDataInterval.md)
 - [Model.PricesTimeSeriesEodSubsampleListData](docs/PricesTimeSeriesEodSubsampleListData.md)
 - [Model.PricesTimeSeriesIntradayListData](docs/PricesTimeSeriesIntradayListData.md)
 - [Model.PricesTimeSeriesIntradayListDataRange](docs/PricesTimeSeriesIntradayListDataRange.md)
 - [Model.PricesTimeSeriesIntradayListMeta](docs/PricesTimeSeriesIntradayListMeta.md)
 - [Model.PricesTimeSeriesIntradayListMetaPagination](docs/PricesTimeSeriesIntradayListMetaPagination.md)
 - [Model.StatusObject](docs/StatusObject.md)
 - [Model.VendorChartIQTimeSeriesEodListData](docs/VendorChartIQTimeSeriesEodListData.md)
 - [Model.VendorChartIQTimeSeriesEodListDataAdjustments](docs/VendorChartIQTimeSeriesEodListDataAdjustments.md)
 - [Model.VendorChartIQTimeSeriesEodListDataRange](docs/VendorChartIQTimeSeriesEodListDataRange.md)
 - [Model.VendorChartIQTimeSeriesEodListMeta](docs/VendorChartIQTimeSeriesEodListMeta.md)
 - [Model.VendorChartIQTimeSeriesEodListMetaPagination](docs/VendorChartIQTimeSeriesEodListMetaPagination.md)
 - [Model.VendorChartIQTimeSeriesEodSubsampleGetData](docs/VendorChartIQTimeSeriesEodSubsampleGetData.md)
 - [Model.VendorChartIQTimeSeriesEodSubsampleGetDataInterval](docs/VendorChartIQTimeSeriesEodSubsampleGetDataInterval.md)
 - [Model.VendorChartIQTimeSeriesEodSubsampleGetMeta](docs/VendorChartIQTimeSeriesEodSubsampleGetMeta.md)
 - [Model.VendorChartIQTimeSeriesEodSubsampleListData](docs/VendorChartIQTimeSeriesEodSubsampleListData.md)
 - [Model.VendorChartIQTimeSeriesIntradaySubsampleGetData](docs/VendorChartIQTimeSeriesIntradaySubsampleGetData.md)
 - [Model.VendorChartIQTimeSeriesIntradaySubsampleGetDataAdjustments](docs/VendorChartIQTimeSeriesIntradaySubsampleGetDataAdjustments.md)
 - [Model.VendorChartIQTimeSeriesIntradaySubsampleListData](docs/VendorChartIQTimeSeriesIntradaySubsampleListData.md)
 - [Model.VendorChartIQTimeSeriesIntradaySubsampleListDataRange](docs/VendorChartIQTimeSeriesIntradaySubsampleListDataRange.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
